# cdrc-semantic-search

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Dockerfile  README.md  dvc.yaml  podman-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.dvc/: config
.github/workflows/: ci.yaml
config/: config.toml  model.json
data/: .gitignore
demos/: demo.py
scripts/: update_datastore.py
search_service/: api.py  streamlit_app.py
src/: api.py  cdrc_logs.py  datastore.py  evaluation.py  extract.py  lc_test.py  model.py  params.py  pipeline.py  query_api.py  semantic_search.py  visualise_embeddings.py
src/common/: logging.py  utils.py
