[project]
name = ""
version = ""
description = ""
authors = [
    {name = "cjber", email = "cjberragan@gmail.com"},
]
dependencies = [
    "llama-index>=0.9.45.post1",
    "llama-hub>=0.0.78",
    "pinecone-client>=3.0.2",
    "requests>=2.31.0",
    "fastapi>=0.109.2",
    "pydantic-settings>=2.1.0",
    "seaborn>=0.13.2",
    "dateparser>=1.2.0",
    "gunicorn>=21.2.0",
    "uvicorn>=0.27.0.post1",
    "unstructured>=0.12.3",
    "setuptools>=69.0.3",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.21.0",
    "ipdb>=0.13.13",
    "dvc>=3.43.1",
    "dvc-s3>=3.0.1",
    "polars>=0.20.7",
    "pre-commit>=3.6.0",
    "streamlit>=1.31.0",
    "sourcery-cli>=1.15.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.27.0",
    "mypy>=1.8.0",
    "pip>=24.0",
    "python-lsp-server>=1.10.0",
    "unstructured[all-docs]>=0.12.4",
]
