[project]
name = ""
version = ""
description = ""
authors = [
    {name = "cjber", email = "cjberragan@gmail.com"},
]
dependencies = [
    "llama-index>=0.10.44",
    "llama-index-vector-stores-pinecone>=0.1.7",
    "llama-index-readers-file>=0.1.25",
    "requests>=2.32.3",
    "fastapi>=0.111.0",
    "pydantic-settings>=2.3.3",
    "seaborn>=0.13.2",
    "dateparser>=1.2.0",
    "gunicorn>=22.0.0",
    "uvicorn>=0.30.1",
    "unstructured>=0.14.5",
    "setuptools>=70.0.0",
    "llama-parse>=0.4.4",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.25.0",
    "ipdb>=0.13.13",
    "polars>=0.20.31",
    "pre-commit>=3.7.1",
    "types-dateparser>=1.2.0.20240420",
]
